// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar responsive 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-4"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar width grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(230,230,230);
}

.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-10"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="grid c1"
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M540,270.5H0.5V0.5H540"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="540"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
    </g>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c2"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c2"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c2"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c2"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with Title, X label, Y label 1`] = `
.c2 {
  text-anchor: middle;
}

.c3 {
  text-anchor: middle;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c4 {
  fill: rgb(8,104,172);
}

.c4:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

.c1 {
  font-size: 1.5em;
  text-anchor: middle;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-12"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="chart-title c1"
      height="270"
      width="540"
      x="270"
      y="10"
    >
      Test title
    </text>
    <text
      class="x-axis-label c2"
      height="270"
      width="540"
      x="270"
      y="290"
    >
      Test X label
    </text>
    <text
      class="y-axis-label c3"
      height="270"
      width="540"
      x="-135"
      y="-16"
    >
      Test Y label
    </text>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c4"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c4"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c4"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c4"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with X label rotation 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-18"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          text-anchor="end"
          transform="translate(-12, 6) rotate(-50)"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with dates 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-2"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Wed 31
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Thu 01
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Fri 02
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Sat 03
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with height 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 100px;
  width: 177.77777777777777px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-8"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="2.043010752688172"
        width="17.073170731707318"
        x="1.8970189701896985"
        y="7.956989247311828"
      />
      <rect
        class="bar c1"
        height="7.526881720430108"
        width="17.073170731707318"
        x="20.86720867208672"
        y="2.473118279569892"
      />
      <rect
        class="bar c1"
        height="10"
        width="17.073170731707318"
        x="39.83739837398374"
        y="0"
      />
      <rect
        class="bar c1"
        height="8.602150537634408"
        width="17.073170731707318"
        x="58.80758807588076"
        y="1.397849462365592"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 10)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H78.27777777777777V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(10.433604336043357,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(29.40379403794038,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(48.3739837398374,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(67.34417344173441,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,10.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,10.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,8.349462365591398)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,6.198924731182796)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,4.048387096774194)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,1.897849462365592)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with source 1`] = `
.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c1 {
  font-size: 0.8em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-14"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="data-source c1"
      height="270"
      width="540"
      x="540"
      y="270"
    >
      Test source
    </text>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c2"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c2"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c2"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c2"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with source link 1`] = `
.c3 {
  fill: rgb(8,104,172);
}

.c3:hover {
  fill: rgb(0,84,152);
}

.c1 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  font-size: 0.8em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-16"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <a
      class="data-source-link c1"
      href="#"
      target="foo"
      title="bar"
    >
      <text
        class="data-source c2"
        height="270"
        width="540"
        x="540"
        y="270"
      />
    </a>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c3"
        height="55.16129032258064"
        width="118.53658536585367"
        x="13.170731707317032"
        y="214.83870967741936"
      />
      <rect
        class="bar c3"
        height="203.2258064516129"
        width="118.53658536585367"
        x="144.87804878048777"
        y="66.7741935483871"
      />
      <rect
        class="bar c3"
        height="270"
        width="118.53658536585367"
        x="276.5853658536585"
        y="0"
      />
      <rect
        class="bar c3"
        height="232.25806451612902"
        width="118.53658536585367"
        x="408.29268292682923"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, 270)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H540.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(72.43902439024387,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(204.14634146341461,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(335.8536585365853,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(467.56097560975604,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,270.5H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,212.43548387096774)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,154.3709677419355)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,96.30645161290323)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,38.241935483870975)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with width 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 56.25px;
  width: 100px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  id="silky-charts_bar-6"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="-6.89516129032258"
        width="0"
        x="0"
        y="-26.85483870967742"
      />
      <rect
        class="bar c1"
        height="-25.403225806451612"
        width="0"
        x="0"
        y="-8.346774193548388"
      />
      <rect
        class="bar c1"
        height="-33.75"
        width="0"
        x="0"
        y="0"
      />
      <rect
        class="bar c1"
        height="-29.032258064516128"
        width="0"
        x="0"
        y="-4.717741935483872"
      />
    </g>
    <g
      class="axis-x "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
      transform="translate(0, -33.75)"
    >
      <path
        class="domain"
        d="M0.5,6V0.5H0.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          foo
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          bar
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          baz
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          quz
        </text>
      </g>
    </g>
    <g
      class="axis-y "
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="end"
    >
      <path
        class="domain"
        d="M-6,-33.25H0.5V0.5H-6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-33.25)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-25.991935483870968)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-18.733870967741936)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-11.475806451612904)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          60
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-4.217741935483872)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          80
        </text>
      </g>
    </g>
  </g>
</svg>
`;
